crates/squawk_parser/tests/snapshots/tests__set_session_auth_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/set_session_auth.sql
---
SOURCE_FILE
  COMMENT "-- docs"
  WHITESPACE "\n"
  SET_SESSION_AUTH
    SET_KW "SET"
    WHITESPACE " "
    SESSION_KW "SESSION"
    WHITESPACE " "
    AUTHORIZATION_KW "AUTHORIZATION"
    WHITESPACE " "
    ROLE_REF
      ROLE_NAME_REF
        DECIMAL_KW "decimal"
    SEMICOLON ";"
  WHITESPACE "\n"
  SET_SESSION_AUTH
    SET_KW "SET"
    WHITESPACE " "
    SESSION_SCOPE
      SESSION_KW "SESSION"
    WHITESPACE " "
    SESSION_KW "SESSION"
    WHITESPACE " "
    AUTHORIZATION_KW "AUTHORIZATION"
    WHITESPACE " "
    LITERAL
      STRING "'foo'"
    SEMICOLON ";"
  WHITESPACE "\n"
  SET_SESSION_AUTH
    SET_KW "SET"
    WHITESPACE " "
    LOCAL_SCOPE
      LOCAL_KW "LOCAL"
    WHITESPACE " "
    SESSION_KW "SESSION"
    WHITESPACE " "
    AUTHORIZATION_KW "AUTHORIZATION"
    WHITESPACE " "
    SET_SESSION_AUTH_DEFAULT
      DEFAULT_KW "DEFAULT"
    SEMICOLON ";"
  WHITESPACE "\n"
  RESET_SESSION_AUTH
    RESET_KW "RESET"
    WHITESPACE " "
    SESSION_KW "SESSION"
    WHITESPACE " "
    AUTHORIZATION_KW "AUTHORIZATION"
    SEMICOLON ";"
  WHITESPACE "\n\n"
