crates/squawk_parser/tests/snapshots/tests__transaction_mode_trailing_comma_err.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/err/transaction_mode_trailing_comma.sql
---
SOURCE_FILE
  SET_TRANSACTION
    SET_KW "set"
    WHITESPACE " "
    TRANSACTION_MODES
      TRANSACTION_KW "transaction"
      WHITESPACE " "
      TRANSACTION_MODE_LIST
        SERIALIZABLE
          ISOLATION_KW "isolation"
          WHITESPACE " "
          LEVEL_KW "level"
          WHITESPACE " "
          SERIALIZABLE_KW "serializable"
        COMMA ","
    SEMICOLON ";"
  WHITESPACE "\n\n"
  SET_TRANSACTION
    SET_KW "set"
    WHITESPACE " "
    SESSION_CHARACTERISTICS
      SESSION_KW "session"
      WHITESPACE " "
      CHARACTERISTICS_KW "characteristics"
      WHITESPACE " "
      AS_KW "as"
      WHITESPACE " "
      TRANSACTION_KW "transaction"
      WHITESPACE " "
      TRANSACTION_MODE_LIST
        READ_WRITE
          READ_KW "read"
          WHITESPACE " "
          WRITE_KW "write"
        COMMA ","
    SEMICOLON ";"
  WHITESPACE "\n\n"
  BEGIN
    BEGIN_KW "begin"
    WHITESPACE " "
    TRANSACTION_MODE_LIST
      READ_WRITE
        READ_KW "read"
        WHITESPACE " "
        WRITE_KW "write"
      COMMA ","
    SEMICOLON ";"
  WHITESPACE "\n\n"
  BEGIN
    START_KW "start"
    WHITESPACE " "
    TRANSACTION_KW "transaction"
    WHITESPACE " "
    TRANSACTION_MODE_LIST
      READ_WRITE
        READ_KW "read"
        WHITESPACE " "
        WRITE_KW "write"
      COMMA ","
    SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- trailing comma at EOF"
  WHITESPACE "\n"
  SET_TRANSACTION
    SET_KW "set"
    WHITESPACE " "
    TRANSACTION_MODES
      TRANSACTION_KW "transaction"
      WHITESPACE " "
      TRANSACTION_MODE_LIST
        SERIALIZABLE
          ISOLATION_KW "isolation"
          WHITESPACE " "
          LEVEL_KW "level"
          WHITESPACE " "
          SERIALIZABLE_KW "serializable"
        COMMA ","
  WHITESPACE "\n"
---
error[syntax-error]: expected transaction mode after comma
  ╭▸ 
1 │ set transaction isolation level serializable,;
  ╰╴                                             ━
error[syntax-error]: expected transaction mode after comma
  ╭▸ 
3 │ set session characteristics as transaction read write,;
  ╰╴                                                      ━
error[syntax-error]: expected transaction mode after comma
  ╭▸ 
5 │ begin read write,;
  ╰╴                 ━
error[syntax-error]: expected transaction mode after comma
  ╭▸ 
7 │ start transaction read write,;
  ╰╴                             ━
error[syntax-error]: expected transaction mode after comma
   ╭▸ 
10 │ set transaction isolation level serializable,
   ╰╴                                             ━
