crates/squawk_parser/tests/snapshots/tests__unlisten_ok.snap
---
source: crates/squawk_parser/tests/tests.rs
input_file: crates/squawk_parser/tests/data/ok/unlisten.sql
---
SOURCE_FILE
  COMMENT "-- pg_docs"
  WHITESPACE "\n"
  UNLISTEN
    UNLISTEN_KW "unlisten"
    WHITESPACE " "
    NAME_REF
      VIRTUAL_KW "virtual"
    SEMICOLON ";"
  WHITESPACE "\n\n"
  UNLISTEN
    UNLISTEN_KW "unlisten"
    WHITESPACE " "
    STAR "*"
    SEMICOLON ";"
  WHITESPACE "\n\n"
